; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_niu.c_niu_schedule_napi.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_niu.c_niu_schedule_napi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.niu = type { i32 }
%struct.niu_ldg = type { i32, i32, i8*, i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.niu*, %struct.niu_ldg*, i8*, i8*, i8*)* @niu_schedule_napi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @niu_schedule_napi(%struct.niu* %0, %struct.niu_ldg* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca %struct.niu*, align 8
  %7 = alloca %struct.niu_ldg*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store %struct.niu* %0, %struct.niu** %6, align 8
  store %struct.niu_ldg* %1, %struct.niu_ldg** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load %struct.niu_ldg*, %struct.niu_ldg** %7, align 8
  %12 = getelementptr inbounds %struct.niu_ldg, %struct.niu_ldg* %11, i32 0, i32 0
  %13 = call i32 @napi_schedule_prep(i32* %12)
  %14 = call i64 @likely(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %35

16:                                               ; preds = %5
  %17 = load i8*, i8** %8, align 8
  %18 = load %struct.niu_ldg*, %struct.niu_ldg** %7, align 8
  %19 = getelementptr inbounds %struct.niu_ldg, %struct.niu_ldg* %18, i32 0, i32 4
  store i8* %17, i8** %19, align 8
  %20 = load i8*, i8** %9, align 8
  %21 = load %struct.niu_ldg*, %struct.niu_ldg** %7, align 8
  %22 = getelementptr inbounds %struct.niu_ldg, %struct.niu_ldg* %21, i32 0, i32 3
  store i8* %20, i8** %22, align 8
  %23 = load i8*, i8** %10, align 8
  %24 = load %struct.niu_ldg*, %struct.niu_ldg** %7, align 8
  %25 = getelementptr inbounds %struct.niu_ldg, %struct.niu_ldg* %24, i32 0, i32 2
  store i8* %23, i8** %25, align 8
  %26 = load %struct.niu*, %struct.niu** %6, align 8
  %27 = load %struct.niu_ldg*, %struct.niu_ldg** %7, align 8
  %28 = getelementptr inbounds %struct.niu_ldg, %struct.niu_ldg* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load i8*, i8** %8, align 8
  %31 = call i32 @__niu_fastpath_interrupt(%struct.niu* %26, i32 %29, i8* %30)
  %32 = load %struct.niu_ldg*, %struct.niu_ldg** %7, align 8
  %33 = getelementptr inbounds %struct.niu_ldg, %struct.niu_ldg* %32, i32 0, i32 0
  %34 = call i32 @__napi_schedule(i32* %33)
  br label %35

35:                                               ; preds = %16, %5
  ret void
}

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @napi_schedule_prep(i32*) #1

declare dso_local i32 @__niu_fastpath_interrupt(%struct.niu*, i32, i8*) #1

declare dso_local i32 @__napi_schedule(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
